# seemsgood_guild

./: Cargo.toml  LICENSE  README.md  build.rs  json_helpers.sh  wrangler.toml
.github/workflows/: sync-upstream.yml
src/: about_data.rs  dps_sims.rs  lib.rs  mythic_plus.rs  player_metadata.rs
templates/: about.html  index.html  layout.html  mythic-plus.html  resources.html  talents.html  wowaudit.html
templates/assets/: contact-card.html  roster-players.html  scrolling-events.html  season-card.html  wcl-progress-card.html
